RESOLVED FIXED38909
JSDataGridColumnListCustom.cpp doesn't compile
https://bugs.webkit.org/show_bug.cgi?id=38909
Summary JSDataGridColumnListCustom.cpp doesn't compile
George Wright
Reported 2010-05-11 08:21:46 PDT
It seems that JSDataGridColumnListCustom.cpp wasn't updated to use the new identifierToAtomicString() function introduced in the patch for https://bugs.webkit.org/show_bug.cgi?id=37735
Attachments
Use identifierToAtomicString (2.22 KB, patch)
2010-05-11 08:36 PDT, George Wright
no flags
George Wright
Comment 1 2010-05-11 08:36:20 PDT
Created attachment 55704 [details] Use identifierToAtomicString Proposed fix.
WebKit Commit Bot
Comment 2 2010-05-14 01:09:28 PDT
Comment on attachment 55704 [details] Use identifierToAtomicString Clearing flags on attachment: 55704 Committed r59448: <http://trac.webkit.org/changeset/59448>
WebKit Commit Bot
Comment 3 2010-05-14 01:09:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.