2010-05-14  George Wright  <gwright@rim.com>

Reviewed by George Staikos.

        https://bugs.webkit.org/show_bug.cgi?id=38909

        Update JSDataGridColumnListCustom.cpp to call identifierToAtomicString()
        on the property name.

        * bindings/js/JSDataGridColumnListCustom.cpp:
        (WebCore::JSDataGridColumnList::canGetItemsForName):
        (WebCore::JSDataGridColumnList::nameGetter):

Canonical link: https://commits.webkit.org/50605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59448 268f45cc-cd09-0410-ab3c-d52691b4dbfc